log
Fri, Apr 18, 2025 10:38:02 AM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  1:55:42 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5ffecac
Fri, Apr 18, 2025  1:59:54 PM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|0
4fa2d40
Fri, Apr 18, 2025  3:07:45 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c: In function 'firstMap':
hashmap.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1.exe: all warnings being treated as errors
da92db1
Fri, Apr 18, 2025  3:08:05 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
bafbc0a
Fri, Apr 18, 2025  3:10:35 PM: 
 tests:  0|6
total_score: 0/70
7decab8
Fri, Apr 18, 2025  3:12:03 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
624c813
Fri, Apr 18, 2025  3:12:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f3f49b6
Fri, Apr 18, 2025  3:14:29 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
b1f9e85
Fri, Apr 18, 2025  3:15:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
26180d1
Fri, Apr 18, 2025  3:18:09 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
72e73c6
Fri, Apr 18, 2025  3:20:25 PM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
f5babf6
Fri, Apr 18, 2025  3:21:29 PM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
87b7a47
Fri, Apr 18, 2025  3:21:59 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
2465d4f
Fri, Apr 18, 2025  3:27:52 PM: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  1|5
total_score: 10/70
8058926
Fri, Apr 18, 2025  3:36:14 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: warning: unused variable 'index' [-Wunused-variable]
   43 |     long index = hash(key, map->capacity); // Aplicamos la funcion hash a la key para que asi obtengamos el indice en el cual colocaremos el Pair
      |          ^~~~~
hashmap.c: In function 'enlarge':
hashmap.c:51:13: error: conflicting types for 'aux_capacity'; have 'Pair **'
   51 |     Pair ** aux_capacity = map->buckets;
      |             ^~~~~~~~~~~~
hashmap.c:50:10: note: previous definition of 'aux_capacity' with type 'long int'
   50 |     long aux_capacity = map->capacity; // Guardamos la capacidad actual en una varible auxiliar para no perderla
      |          ^~~~~~~~~~~~
hashmap.c:51:13: warning: unused variable 'aux_capacity' [-Wunused-variable]
   51 |     Pair ** aux_capacity = map->buckets;
      |             ^~~~~~~~~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
7a6c3e2
Fri, Apr 18, 2025  3:36:57 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:45:12: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   45 |     return NULL;
      |            ^~~~
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:43:10: warning: unused variable 'index' [-Wunused-variable]
   43 |     long index = hash(key, map->capacity); // Aplicamos la funcion hash a la key para que asi obtengamos el indice en el cual colocaremos el Pair
      |          ^~~~~
hashmap.c: In function 'enlarge':
hashmap.c:51:13: error: conflicting types for 'aux_capacity'; have 'Pair **'
   51 |     Pair ** aux_capacity = map->buckets;
      |             ^~~~~~~~~~~~
hashmap.c:50:10: note: previous definition of 'aux_capacity' with type 'long int'
   50 |     long aux_capacity = map->capacity; // Guardamos la capacidad actual en una varible auxiliar para no perderla
      |          ^~~~~~~~~~~~
hashmap.c:52:12: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   52 |     return NULL;
      |            ^~~~
hashmap.c:48:6: note: declared here
   48 | void enlarge(HashMap * map) {
      |      ^~~~~~~
hashmap.c:51:13: warning: unused variable 'aux_capacity' [-Wunused-variable]
   51 |     Pair ** aux_capacity = map->buckets;
      |             ^~~~~~~~~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
c5de896
